// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Braaseye draws_correctly_braaFirst 1`] = `
<canvas
  data-snapshot-image="e8b1df6035af40f00b6cc2737316cd20483240cab600b9c157d627deb3d66a87cff192ca17dac753488afb36c1815a9e66fbfc1194b5b69d42326637752cef96"
  height="50"
  width="100"
/>
`;

exports[`Braaseye draws_correctly_noOffset 1`] = `
<canvas
  data-snapshot-image="95ac8c7149e872ccb8f2481c356526ce473a92f4cee648b72fe7c747b0830c4c1470086cec270f73e5f8861580c33dd9f96c7f12edc3d4ebb8da8d1fa4bd8ff5"
  height="50"
  width="100"
/>
`;

exports[`Braaseye draws_correctly_withOffset 1`] = `
<canvas
  data-snapshot-image="81b97fb44b2296b07c35686d3b192298e1db0569474cf7717cbaa4ed65baecd46843e1cba26f25c94df13f10b1db52d24635c272a906e4b57cbe9edf5a7d4445"
  height="50"
  width="100"
/>
`;
